# BDL_repo_structure

bigdatalab/: .gitignore  LICENSE  README.md  SETUP_GUIDE.md  docker-compose.yml  env.example  pyproject.toml
bigdatalab/.github/hooks/: pre-commit
bigdatalab/module_02_from_event_to_data/lecture_03_sql_analysis/: task_requirements.md
bigdatalab/module_02_from_event_to_data/lecture_03_sql_analysis/homework/: lesson_1.md  lesson_1_good.sql  lesson_1_perfect.sql  lesson_2.md  lesson_2_good.sql  lesson_2_perfect.sql
bigdatalab/module_02_from_event_to_data/lecture_03_sql_analysis/homeworks/: 3_10 PRACTICE Data analysis via SQL - Команды SQL good.sql  3_10 PRACTICE Data analysis via SQL - Команды SQL perfect.sql  3_10 PRACTICE Data analysis via SQL - Построение Data Processing good.sql  3_10 PRACTICE Data analysis via SQL - Построение Data Processing perfect.sql
bigdatalab/module_02_from_event_to_data/lecture_03_sql_analysis/tests/: Readme.md
bigdatalab/module_03_data_ingestion/lecture_02_python_for_ingestion/: task_requirements.md
bigdatalab/module_03_data_ingestion/lecture_02_python_for_ingestion/homework/: etl_pipeline.md  etl_pipeline_good.py  etl_pipeline_perfect.py  init.sql  lesson_1.md  lesson_1_good.py  lesson_2.md  lesson_2_good.py  lesson_2_perfect.py
