[project]
name = "innowisebigdatalab"
version = "0.1.0"
description = "Big Data Lab educational project"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "SQLAlchemy>=2.0.45",
    "duckdb>=1.4.3",
    "testcontainers[postgres]>=4.9.0",
    "psycopg2-binary>=2.9.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v --import-mode=importlib"
testpaths = ["module_*/*/tests"]
norecursedirs = [".git", "__pycache__", ".venv", "venv", "build", "dist", "*.egg-info"]

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["module_*"]
